Actions
Bug #14351
closedmwl: mismatched bound
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 11:
../../common/io/mwl/mwl.c:1682:23: error: argument 2 of type 'const uint8_t[6]' {aka 'const unsigned char[6]'} with mismatched bound [-Werror=array-parameter=] 1682 | const uint8_t addr[IEEE80211_ADDR_LEN]) | ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~ ../../common/io/mwl/mwl.c:271:59: note: previously declared as 'const uint8_t *' {aka 'const unsigned char *'} 271 | static int mwl_hal_setmac_locked(struct mwl_softc *, const uint8_t *); | ^~~~~~~~~~~~~~~ ../../common/io/mwl/mwl.c:1712:23: error: argument 2 of type 'const uint8_t[6]' {aka 'const unsigned char[6]'} with mismatched bound [-Werror=array-parameter=] 1712 | const uint8_t addr[IEEE80211_ADDR_LEN], uint16_t aid, uint16_t sid, | ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~ ../../common/io/mwl/mwl.c:276:56: note: previously declared as 'const uint8_t *' {aka 'const unsigned char *'} 276 | static int mwl_hal_newstation(struct mwl_softc *, const uint8_t *, | ^~~~~~~~~~~~~~~ ../../common/io/mwl/mwl.c:2027:23: error: argument 2 of type 'const uint8_t[6]' {aka 'const unsigned char[6]'} with mismatched bound [-Werror=array-parameter=] 2027 | const uint8_t bssId[IEEE80211_ADDR_LEN], uint16_t assocId) | ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~ ../../common/io/mwl/mwl.c:291:56: note: previously declared as 'const uint8_t *' {aka 'const unsigned char *'} 291 | static int mwl_hal_setassocid(struct mwl_softc *, const uint8_t *, | ^~~~~~~~~~~~~~~ ../../common/io/mwl/mwl.c:2413:57: error: argument 2 of type 'const uint8_t[6]' {aka 'const unsigned char[6]'} with mismatched bound [-Werror=array-parameter=] 2413 | mwl_setanywepkey(struct ieee80211com *ic, const uint8_t mac[IEEE80211_ADDR_LEN]) | ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~ ../../common/io/mwl/mwl.c:310:57: note: previously declared as 'const uint8_t *' {aka 'const unsigned char *'} 310 | static void mwl_setanywepkey(struct ieee80211com *, const uint8_t *); | ^~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Testing done: build/install/boot; wsdiff is only reporting constant differences:
/code/14351/usr/src/uts/intel/mwl/debug64/mwl NOTE: ELF .text difference detected. 7526c7526 < mwl_attach+0x960: ba ef 0e 00 00 movl $0xeef,%edx --- > mwl_attach+0x960: ba ec 0e 00 00 movl $0xeec,%edx 7886c7886 < mwl_detach+0x230: ba 90 10 00 00 movl $0x1090,%edx --- > mwl_detach+0x230: ba 8d 10 00 00 movl $0x108d,%edx
Updated by Electric Monk 6 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1a680f9368cf892cb07dffab5626ac0592c5574c
commit 1a680f9368cf892cb07dffab5626ac0592c5574c Author: Toomas Soome <tsoome@me.com> Date: 2022-02-08T21:13:13.000Z 14351 mwl: mismatched bound Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions